[gd_scene load_steps=43 format=3 uid="uid://di3aaonabglf5"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_xxa1l"]
[ext_resource type="Texture2D" uid="uid://bu0hhktqop24h" path="res://Assets/Duck_Running.png" id="2_bcpv3"]
[ext_resource type="Texture2D" uid="uid://fwrto41ed438" path="res://Player/Dash_Step_Sprite_Sheet.png" id="2_hitf0"]
[ext_resource type="Texture2D" uid="uid://btvhxe0oh5mcv" path="res://Assets/Duck_Fly_(dash).png" id="2_otmwr"]
[ext_resource type="Texture2D" uid="uid://c286sxa01av22" path="res://Assets/Duck_Jump.png" id="3_f7qo3"]
[ext_resource type="Texture2D" uid="uid://2dpwtyvnm0b4" path="res://Duck_Sprite_Sheet.png" id="3_uotxy"]
[ext_resource type="Texture2D" uid="uid://cb8mpok2toti7" path="res://Player/Jump_Sprite_Sheet.png" id="4_kwdps"]
[ext_resource type="Texture2D" uid="uid://bql0df1hk2u1m" path="res://Assets/LockedIcon.png" id="4_mmxrd"]
[ext_resource type="PackedScene" uid="uid://brm2721qee8tc" path="res://Scenes/jumping_particles.tscn" id="5_cnhpm"]
[ext_resource type="Texture2D" uid="uid://cqplejx33q8x6" path="res://Player/Run_Sprite_Sheet.png" id="5_hcf4f"]
[ext_resource type="Texture2D" uid="uid://dssgkhygchvw0" path="res://Assets/NiceCircle.png" id="7_7v07m"]
[ext_resource type="AudioStream" uid="uid://bloiybq7a4i6y" path="res://Sounds/powerUp.wav" id="8_ogya7"]
[ext_resource type="AudioStream" uid="uid://bwk21ecb7ohab" path="res://Sounds/jump.wav" id="8_ppshu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vysij"]
atlas = ExtResource("2_otmwr")
region = Rect2(422, 53, 422, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik277"]
atlas = ExtResource("2_otmwr")
region = Rect2(844, 53, 422, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fymu"]
atlas = ExtResource("3_f7qo3")
region = Rect2(422, 53, 422, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijwvd"]
atlas = ExtResource("3_f7qo3")
region = Rect2(844, 53, 422, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_icckt"]
atlas = ExtResource("3_f7qo3")
region = Rect2(1266, 53, 422, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aqol"]
atlas = ExtResource("2_bcpv3")
region = Rect2(433, 57, 425, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi56k"]
atlas = ExtResource("2_bcpv3")
region = Rect2(858, 57, 425, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t012"]
atlas = ExtResource("2_bcpv3")
region = Rect2(1283, 57, 425, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwekj"]
atlas = ExtResource("5_hcf4f")
region = Rect2(876, 0, 438, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvngb"]
atlas = ExtResource("4_kwdps")
region = Rect2(430, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvyuk"]
atlas = ExtResource("4_kwdps")
region = Rect2(870, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj4g4"]
atlas = ExtResource("4_kwdps")
region = Rect2(1310, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_vampe"]
atlas = ExtResource("4_kwdps")
region = Rect2(430, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g6hf"]
atlas = ExtResource("4_kwdps")
region = Rect2(870, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmech"]
atlas = ExtResource("4_kwdps")
region = Rect2(1310, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8x3f"]
atlas = ExtResource("2_hitf0")
region = Rect2(870, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv8rk"]
atlas = ExtResource("5_hcf4f")
region = Rect2(430, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_tetqs"]
atlas = ExtResource("5_hcf4f")
region = Rect2(870, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxpgf"]
atlas = ExtResource("5_hcf4f")
region = Rect2(1310, 0, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ohht"]
atlas = ExtResource("5_hcf4f")
region = Rect2(430, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw7xg"]
atlas = ExtResource("5_hcf4f")
region = Rect2(870, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_8amn8"]
atlas = ExtResource("3_uotxy")
region = Rect2(430, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnroy"]
atlas = ExtResource("3_uotxy")
region = Rect2(870, 430, 440, 430)

[sub_resource type="AtlasTexture" id="AtlasTexture_urm7h"]
atlas = ExtResource("3_uotxy")
region = Rect2(1310, 430, 440, 430)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxmmv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vysij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik277")
}],
"loop": true,
"name": &"DuckDash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fymu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijwvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icckt")
}],
"loop": true,
"name": &"DuckJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aqol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi56k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t012")
}],
"loop": true,
"name": &"DuckRun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwekj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvngb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvyuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vampe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g6hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmech")
}],
"loop": true,
"name": &"Midair",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8x3f")
}],
"loop": true,
"name": &"Midair Duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv8rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tetqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxpgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ohht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw7xg")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8amn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnroy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urm7h")
}],
"loop": true,
"name": &"Run Duck",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0usu"]
radius = 5.0
height = 28.0

[sub_resource type="Curve" id="Curve_k1ohs"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.134953, 0.974904), -1.36072, -1.36072, 0, 0, Vector2(1, 0), -0.78998, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_u0mua"]
_data = [Vector2(0.0013947, 0.996948), 0.0, -0.013184, 0, 0, Vector2(1, 0), -0.888691, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44ms3"]
radius = 7.0
height = 18.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_xxa1l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
scale = Vector2(0.0767122, 0.0767122)
sprite_frames = SubResource("SpriteFrames_bxmmv")
animation = &"Idle"

[node name="NormalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v0usu")

[node name="AirstallTime" type="Timer" parent="."]
one_shot = true

[node name="AirstallCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Line2D" type="Line2D" parent="."]
z_index = 1
position = Vector2(0, 7)
points = PackedVector2Array(0, 0)
width_curve = SubResource("Curve_k1ohs")

[node name="LockedIcon" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.678431)
z_index = 3
position = Vector2(0, 4)
texture = ExtResource("4_mmxrd")

[node name="JumpingParticles" parent="." instance=ExtResource("5_cnhpm")]
z_index = 10
position = Vector2(0, 15)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 100
texture = ExtResource("7_7v07m")
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_u0mua")
color = Color(1, 1, 0.576471, 1)

[node name="SoundStall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ogya7")
volume_db = -10.0

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ppshu")

[node name="DuckCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_44ms3")
disabled = true

[node name="DuckTime" type="Timer" parent="."]
wait_time = 3.681
one_shot = true

[connection signal="timeout" from="AirstallTime" to="." method="_on_airstall_time_timeout"]
[connection signal="timeout" from="AirstallCooldown" to="." method="_on_airstall_cooldown_timeout"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_trail_timer_timeout"]
[connection signal="timeout" from="DuckTime" to="." method="_on_duck_time_timeout"]
